welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:6: error: reassignment to val
      estSurBiscuit=true
                   ^